infrastructure/k8s/utils/ingress/cockroach/cockroachdb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockroach-ingress-v99
  namespace: thisjowi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/service.serversscheme: https
    # Usamos la referencia local. Traefik la resolverá como thisjowi-cockroach-transport
    traefik.ingress.kubernetes.io/service.serverstransport: cockroach-transport@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: api.thisjowi.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cockroachdb
                port:
                  name: http
